test/TestPhases/namecheck/invalid/implicitImportAccess.blc
import dummy "../imports/constant"

module 

const incr42 = FortyTwo + 1 // no implicit access to dummy.FortyTwo
